# templates

./: .gitignore
docker-X11/: Dockerfile  LICENSE  README.md  docker-compose.yml  env_macos.sh
docker-flask-gunicorn/: .gitignore  Dockerfile  README.md  docker-compose.yml  run_prod.sh
docker-flask-gunicorn-nginx/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_dev.sh  run_prod.sh
docker-flask-gunicorn-nginx/docker/config/nginx/: nginx.conf
docker-python/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docker-python/src/: main.py
qt-app/: .gitignore  README.md
qt-app/cpp/: CMakeLists.txt  README.md
qt-app/cpp/cmake-modules/: CMakeConfigApple.cmake  CMakeConfigUnix.cmake  CMakeConfigWindows.cmake
qt-app/cpp/resources/macOS/: MacOSXBundleInfo.plist.in  post_build_codesign.sh
qt-app/cpp/src/: mainwindow.cpp  mainwindow.h  myapp.cpp  myapp.h
qt-app/py/src/: main.py  mainwindow.py  myapp.py  ui_mainwindow.py
qt-app/py/ui/: mainwindow.ui
qt-camera/: .gitignore  README.md
qt-camera/cpp/: CMakeLists.txt
qt-camera/cpp/src/: main.cpp  mainwindow.cpp  mainwindow.h  myapp.cpp
qt-camera/py/: Pipfile
qt-camera/py/src/: mainwindow.py
react-flask/: .gitignore  README.md
react-flask/backend/: main.py  pyproject.toml  run_dev.sh
react-flask/frontend/: package-lock.json  package.json
react-flask/frontend/src/: App.js  config.js  index.html  index.js  style.css
react-threejs/: package-lock.json  package.json
react-threejs/src/: index.html
react-threejs/src/css/: main.css
react-threejs/src/js/: App.js  sketch.js
threejs/: README.md  package.json
threejs-shader/: README.md  package-lock.json  package.json
threejs-shader/src/: index.html
threejs-shader/src/js/: app.js
threejs-shader/src/js/shader/: fragment_a.glsl  fragment_b.glsl  fragment_b_aa.glsl  vertex.glsl
threejs/src/css/: main.css
threejs/src/js/: app.js
